# usdr-gost

./: .eslintrc.js  .gitattributes  .gitignore  .huskyrc.json  .npmrc  .nycrc  .package-lock 2.json.icloud  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NODE_UPGRADES.md  README.md  cares-grant-opportunities.code-workspace  commitlint.config.js  docker-compose.yml  grants-table-data.sql  package-lock.json  package.json  render.yaml  service.datadog.yaml  start.sh  usdr-gost.code-workspace
.github/: CODEOWNERS  dependabot.yml  next_release_version.bash  pull_request_template.md  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: arpa_quarterly_checklist.yml  test.yml  user_story.yml
.github/workflows/: aws-auth.yml  build-and-deploy.yml  build-api.yaml  build-api.yml  build-website.yml  build.yml  cd.yaml  ci.yaml  ci.yml  code-scanning.yml  dependabot-auto-approve.yml  deploy-production.yml  deploy-staging.yml  deployment.yml  pr-tidying.yml  publish-qa-results.yml  publish-terraform-plan.yml  qa.yml  rds-cert-update.yml  release-api.yaml  release-drafter.yml  select-target-environment.yml  terraform-apply.yml  terraform-ci.yml  terraform-plan.yml  validate-deployment.yml
arpa-exporter/: pyproject.toml
arpa-exporter/src/: worker.py
arpa-exporter/src/lib/: archiving.py  email.py  logging.py  shutdown_handler.py
arpa-exporter/src/static/email_templates/: base.html  formatted_body.html
arpa-exporter/src/static/email_templates/messages/: full_file_export.html  full_file_export.txt
arpa-exporter/tests/: conftest.py
arpa-exporter/tests/fixtures/data/: c93c6251-c1e0-49ab-8f04-d7cc9e1ac22b.xlsm  eb97b891-66c7-4faf-8ea6-67b94d76d28b.xlsm  sample_metadata_1.csv
arpa-exporter/tests/src/: test_worker.py
arpa-exporter/tests/src/data/: 9e6c295e-bd48-4827-9efb-ec91f0bd7607.xlsm  e9c689db-33fc-470e-a16d-a814c1630da1.xlsm  ff4d3f49-e6a0-4229-848b-c6899790e2f1.xlsm  sample_large_metadata.csv
arpa-exporter/tests/src/lib/: test_email.py  test_shutdown_handler.py
arpa_reporter_misc/doc/: arpa-reporter tech stack.txt
arpa_reporter_misc/legacy_migrations/: 20200822130655_initial.js  20200823071001_add_template_id_to_uploads.js  20200826154227_access_tokens_cascade.js  20200831111645_agencies_reporting_period.js  20200831173658_add_agency_id_to_uploads.js  (+40 more)
docker/: Dockerfile  README.md  arpa-exporter.Dockerfile  production-api.Dockerfile  py-exporter.Dockerfile
docs/: deployment.md  development.md  feature-flags.md  filter-logic.md  getting-started.md  releasing.md  setup-email.md  setup-gmail.md  setup-mac.md  setup-windows.md  styling.md  testing.md  workspaces.md
grants_ingest_pipeline/: .gitignore  .terraform.lock.hcl  README.md  local.s3.tfbackend  local.tfvars  main.tf  outputs.tf  variables.tf
server/: configure.js  index.js
src/: grantsgov.js  index.js
terraform/: .tflint.hcl  datadog_email_activity.tf  datadog_monitors.tf  email.tf  main.tf  outputs.tf  prod.s3.tfbackend  prod.tfvars  production.tfvars  sandbox.s3.tfbackend  sandbox.tfvars  staging.s3.tfbackend  staging.tfvars  variables.tf
(+148 files in other folders)
